[gd_scene load_steps=7 format=3 uid="uid://6ewhh0xkgi5q"]

[ext_resource type="Theme" uid="uid://b8ikq1gvmxsgp" path="res://resources/theme.tres" id="1_jj28c"]
[ext_resource type="PackedScene" uid="uid://divc2ithyhuj2" path="res://scenes/battlefield/gui/pause_menu/music_button/music_button.tscn" id="2_bwvok"]
[ext_resource type="Script" path="res://scenes/settings/main_setttings/main_settings.gd" id="2_uvc2n"]
[ext_resource type="PackedScene" uid="uid://g3tb8fv0v5he" path="res://scenes/battlefield/gui/pause_menu/sfx_button/sfx_button.tscn" id="3_47b4y"]
[ext_resource type="Script" path="res://scenes/settings/language_option.gd" id="4_tq8gp"]
[ext_resource type="Shortcut" uid="uid://krf4dorlu4cx" path="res://resources/shortcuts/cancel.tres" id="6_dm1rh"]

[node name="MainSettings" type="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -289.0
offset_top = -279.0
offset_right = 289.0
offset_bottom = 279.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_jj28c")
script = ExtResource("2_uvc2n")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -157.0
offset_top = -38.0
offset_right = 157.0
offset_bottom = 32.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0.0196078, 0, 0.721569, 1)
theme_override_font_sizes/font_size = 48
text = "@SETTINGS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -48.0
offset_top = 43.0
offset_right = 49.0
offset_bottom = 80.0
grow_horizontal = 2
size_flags_vertical = 1
text = "@MUSIC"
horizontal_alignment = 1

[node name="MusicSettings" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 41.0
offset_top = 53.0
offset_right = -41.0
offset_bottom = 140.0
grow_horizontal = 2
theme_override_constants/separation = 10

[node name="MusicButton" parent="MusicSettings" instance=ExtResource("2_bwvok")]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme = null

[node name="MusicSlider" type="HSlider" parent="MusicSettings"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
focus_mode = 0

[node name="SFXLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -31.0
offset_top = 156.0
offset_right = 32.0
offset_bottom = 193.0
grow_horizontal = 2
size_flags_vertical = 1
text = "@SFX"
horizontal_alignment = 1

[node name="MusicSettings2" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 41.0
offset_top = 166.0
offset_right = -41.0
offset_bottom = 253.0
grow_horizontal = 2
theme_override_constants/separation = 10

[node name="SFXButton" parent="MusicSettings2" instance=ExtResource("3_47b4y")]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme = null

[node name="SFXSlider" type="HSlider" parent="MusicSettings2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
focus_mode = 0

[node name="KeyBindingSettingsButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 53.0
offset_top = 282.0
offset_right = -53.0
offset_bottom = 320.0
grow_horizontal = 2
focus_mode = 0
text = "@KEY_BINDING_SETTINGS"

[node name="LanguageLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -48.5
offset_top = 359.0
offset_right = 48.5
offset_bottom = 396.0
grow_horizontal = 2
size_flags_vertical = 1
text = "@LANGUAGE"
horizontal_alignment = 1

[node name="LanguageOptionButton" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 405.0
offset_right = 461.0
offset_bottom = 442.0
focus_mode = 0
script = ExtResource("4_tq8gp")

[node name="GoBackButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -101.0
offset_top = 474.0
offset_right = 101.0
offset_bottom = 522.0
grow_horizontal = 2
focus_mode = 0
shortcut = ExtResource("6_dm1rh")
text = "@BACK"
